Add support for mkv video files in Files.app.
Mkv files had been playable in Chrome, but not in Files.app, once they are downloaded. Thich patch sets Files.app as able to handle mkv files.

TEST=Download an mkv video and try to play it in Files.app.
BUG=175478


Review URL: https://chromiumcodereview.appspot.com/12693003

git-svn-id: http://src.chromium.org/svn/trunk/src/chrome/browser@187939 4ff67af0-8c30-449e-8e8b-ad334ec8d88c

--- a/resources/file_manager/manifest_v1.json
+++ b/resources/file_manager/manifest_v1.json
@@ -53,6 +53,7 @@
         "filesystem:*.3gp",
         "filesystem:*.avi",
         "filesystem:*.m4v",
+        "filesystem:*.mkv",
         "filesystem:*.mov",
         "filesystem:*.mp4",
         "filesystem:*.mpeg",
@@ -124,6 +125,7 @@
         "filesystem:*.3gp",
         "filesystem:*.avi",
         "filesystem:*.m4v",
+        "filesystem:*.mkv",
         "filesystem:*.mov",
         "filesystem:*.mp4",
         "filesystem:*.mpeg",
