--- a/resources/file_manager/manifest.json
+++ b/resources/file_manager/manifest.json
@@ -50,6 +50,7 @@
         "filesystem:*.3gp",
         "filesystem:*.avi",
         "filesystem:*.m4v",
+        "filesystem:*.mkv",
         "filesystem:*.mov",
         "filesystem:*.mp4",
         "filesystem:*.mpeg",
@@ -121,6 +122,7 @@
         "filesystem:*.3gp",
         "filesystem:*.avi",
         "filesystem:*.m4v",
+        "filesystem:*.mkv",
         "filesystem:*.mov",
         "filesystem:*.mp4",
         "filesystem:*.mpeg",
