Play .swf files from Files.app.
Basically copy-and-pasting the .pdf handling, but it is
a little bit more complicated because Flapper plugin path
is specified from the command line.

BUG=176865

Review URL: https://chromiumcodereview.appspot.com/12842006

git-svn-id: http://src.chromium.org/svn/trunk/src/chrome/browser@188385 4ff67af0-8c30-449e-8e8b-ad334ec8d88c

--- a/resources/file_manager/manifest_v1.json
+++ b/resources/file_manager/manifest_v1.json
@@ -90,6 +90,14 @@
       ]
     },
     {
+      "id": "view-swf",
+      "default_title": "__MSG_OPEN_ACTION__",
+      "default_icon": "images/filetype_generic.png",
+      "file_filters": [
+        "filesystem:*.swf"
+      ]
+    },
+    {
       "id": "view-in-browser",
       "default_title": "__MSG_OPEN_ACTION__",
       "default_icon": "images/filetype_generic.png",
