Add util.js and refactor some functions to it
TBR=dgozman
BUG=235423
TEST=
verify if wallpaper picker works as before

Review URL: https://chromiumcodereview.appspot.com/14336014

git-svn-id: http://src.chromium.org/svn/trunk/src/chrome/browser@197389 4ff67af0-8c30-449e-8e8b-ad334ec8d88c

--- a/resources/chromeos/wallpaper_manager/manifest.json
+++ b/resources/chromeos/wallpaper_manager/manifest.json
@@ -23,6 +23,7 @@
     "background": {
       "scripts": [
         "js/constants.js",
+        "js/util.js",
         "js/event_page.js"
       ]
     }
